# LATTICE

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md
.githooks/: pre-commit
.github/workflows/: secret-scan.yml
branding/: generate_logo_8point.py
client-macos/: Package.swift  config.sample.json
client-macos/Sources/LatticeCLI/: Config.swift  Detector.swift  Logger.swift  PathState.swift  UDPEchoProbe.swift  UTun.swift  main.swift
client-rs/: Cargo.toml  calibration.json  config.3endpoints.template.json
client-rs/lattice-analyze/: Cargo.toml
client-rs/lattice-analyze/src/: constants.rs  main.rs
client-rs/lattice-client/: Cargo.toml
client-rs/lattice-client/src/: main.rs
client-rs/lattice-core/: Cargo.toml
client-rs/lattice-core/src/: lib.rs
client-rs/lattice-os-linux/: Cargo.toml
client-rs/lattice-os-linux/src/: lib.rs
client-rs/lattice-os-macos/: Cargo.toml
client-rs/lattice-os-macos/src/: lib.rs
client-rs/scripts/: lattice_config_gen.py  lattice_report.py  lattice_split.py
dashboard/: app.py  constants.py  requirements.txt
dashboard/assets/: app.js  constants.js  index.html  style.css  world-land.js
dashboard/tests/: test_app_utils.py
docs/: PROTOCOL.md  THE_STRING_PROJECT.md
scripts/: rotate_secret.py  scan_secrets.sh  test_all.sh
server/: go.mod  main.go
