[package]
name = "lattice-client"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "lattice"
path = "src/main.rs"

[dependencies]
lattice-core = { path = "../lattice-core" }
serde_json = "1"
rand = "0.8"
libc = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
lattice-os-macos = { path = "../lattice-os-macos" }

[target.'cfg(target_os = "linux")'.dependencies]
lattice-os-linux = { path = "../lattice-os-linux" }
